Make sure logout dropdown stays all one one line even at narrower screen widths instead of wrapping

--- a/src/components/dashboardHeader/dashboardHeader.module.css
+++ b/src/components/dashboardHeader/dashboardHeader.module.css
@@ -74,7 +74,6 @@
 .logoutDropdown {
   display: inline-block;
   position: fixed;
-  max-width: 30%;
   top: 90px;
   right: 16px;
 }
